# aoc-2024

./: .gitignore  README.md  pyproject.toml
aoc_2024/scripts/: add_day.py  get_input.py  run_day.py  test_day.py  visualize_day.py
aoc_2024/scripts/templates/: solution_template.txt  test_template.txt
aoc_2024/solutions/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py
aoc_2024/utils/: get_input_for_day.py
tests/aoc_2024/solutions/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py  test_day_07.py  test_day_08.py
